--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: stupid_ratio
-description: A multiplayer Q&A Session game that shows a stupid ratio as the result
+description: A new Flutter project.
 
 publish_to: 'none'
 
@@ -12,18 +12,32 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  auto_route: ^3.1.3
   cupertino_icons: ^1.0.2
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   firebase_analytics: ^8.3.4
   cloud_firestore: ^3.1.0
+  dartz: ^0.10.0
+  flutter_bloc: ^8.0.0
+  freezed_annotation: ^1.0.0
+  get_it: ^7.2.0
+  injectable: ^1.5.0
+  json_annotation: ^4.3.0
+  uuid: ^3.0.5
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.5
+  freezed: ^1.0.0
+  injectable_generator: ^1.5.2
+  json_serializable: ^6.0.1
+  very_good_analysis: ^2.4.0
+  auto_route_generator: ^3.1.0
 
 flutter:
 
@@ -33,29 +47,3 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
